gitops/paperless/external-httproute.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-mtls
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external-gateway
    namespace: external-gateway
    sectionName: mtls
  hostnames:
  - "paperless.mtls.buc.sh"
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: paperless
      port: 8000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
