gitops/paperless/h5ai-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h5ai
  namespace: paperless
  labels:
    app.kubernetes.io/name: h5ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: h5ai
  template:
    metadata:
      labels:
        app.kubernetes.io/name: h5ai
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1001
      #   runAsGroup: 1001
      #   fsGroup: 1001
      automountServiceAccountToken: true
      containers:
      - name: h5ai
        image:  awesometic/h5ai
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 80
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 80
        resources:
          requests:
            cpu: 5m
            memory: 20Mi
          limits: {}
        # securityContext:
        #   allowPrivilegeEscalation: false
        #   capabilities:
        #     drop:
        #     - ALL
        #   seccompProfile:
        #     type: RuntimeDefault
        volumeMounts:
        - mountPath: /h5ai/
          name: paperless-data
          readOnly: true
      volumes:
      - name: paperless-data
        persistentVolumeClaim:
          claimName: paperless-data

---
apiVersion: v1
kind: Service
metadata:
  name: h5ai-paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: h5ai
spec:
  selector:
    app.kubernetes.io/name: h5ai
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: h5ai-aperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: h5ai
spec:
  rules:
  - host: files.prod.buc.sh
    http:
      paths:
      - path: /paperless
        pathType: Prefix
        backend:
          service:
            name: h5ai-paperless
            port:
              number: 80
  - host: files.10.0.0.21.nip.io
    http:
      paths:
      - path: /paperless
        pathType: Prefix
        backend:
          service:
            name: h5ai-paperless
            port:
              number: 80
