gitops/paperless/paperless-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
    spec:
      securityContext:
        runAsNonRoot: false
        fsGroup: 1000
      automountServiceAccountToken: true
      containers:
      - name: paperless
        image:  ghcr.io/paperless-ngx/paperless-ngx:3.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
        livenessProbe:
          failureThreshold: 6
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 8000
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          tcpSocket:
            port: 8000
        resources:
          requests:
            cpu: 50m
            memory: 400Mi
          limits: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - SETUID
            - SETGID
            - FOWNER
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /data
          name: paperless-nfs
      - name: paperless-exporter
        image: ghcr.io/hansmi/prometheus-paperless-exporter:v0.0.10
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 8081
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          httpGet:
            path: /
            port: metrics
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          httpGet:
            path: /
            port: metrics
        resources:
          requests:
            cpu: 1m
            memory: 1Mi
          limits: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
      volumes:
      - name: paperless-nfs
        persistentVolumeClaim:
          claimName: paperless-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  selector:
    app.kubernetes.io/name: paperless
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: http
  - name: metrics
    protocol: TCP
    port: 8081
    targetPort: metrics

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-http
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
spec:
  rules:
  - host: paperless.10.0.0.21.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              number: 8000
  - host: paperless.10.0.0.21.nip.io
    http:
      paths:
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              number: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-tls
  namespace: paperless
spec:
  tls:
  - hosts:
      - paperless.buc.sh
    secretName: cert-paperless-buc-sh
  rules:
  - host: "paperless.buc.sh"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: paperless
            port:
              number: 8000
